fix row overflow

--- a/src/pages/schnelle-website.module.scss
+++ b/src/pages/schnelle-website.module.scss
@@ -3,6 +3,7 @@
 .centerrow {
 	display: flex;
 	justify-content: center;
+	width: 100%;
 }
 
 .button-container {
